Tried to fix header on iPhone.

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -33,6 +33,10 @@ body {
       font-size: 32px;
       margin: 0;
       line-height: 1.25 !important;
+      
+      @media handheld, only screen and (max-width: 767px) {
+        font-size: 26px;
+      }
 
       a {
         color: black;
